--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   flyway:
     image: flyway/flyway:11
-    command: -url=jdbc:postgresql://postgres:5432/tankgame -user=postgres -password=password migrate
+    command: -url=jdbc:postgresql://postgres:5432/tankgame -user=postgres -password=password -connectRetries=10 migrate
     depends_on:
       - postgres
     volumes:
